# ECE143_Historical_Housing_Trends

./: .gitignore  README.md  ccc.xlsx  choropleth.ipynb  exploration.ipynb  price_trends_1year_chropleth.ipynb  pyproject.toml  readme.txt
data/: README.md
data/raw/: bbb.xlsx
notebooks/: choropleth.ipynb  exploration.ipynb  price_trends_1year_chropleth.ipynb
output/: county_growth_rates.csv  state_growth_rates.csv
src/: data_cleaning.py
